Correct spacing for > 1 h1

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -89,6 +89,9 @@ p a:visited { color: @dark-color; }
  * PARAGRAPH SPACING
  */
 h2, h3, h4 { margin-top: 20px; }
+h1 { margin-top: 20px; }
+/* why does this work lol? h1 doesn't have children... oh well */
+h1:first-child { margin-top: 0px;  }
 p          { margin-top: 10px; }
 #sidebar li { margin-top: 10px; }
 #sidebar ul { margin-top: 5px; }
